--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,12 @@
 name: Metric Geometry and Gerrymandering Group
 url: https://www.mggg.org/
+
+title: Metric Geometry and Gerrymandering Group
+author: Metric Geometry and Gerrymandering Group
+
+description: A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.
+google_site_verification: jaL3ii25-g2LejBrllWbH-DmyT7b-vJw8URj-tvq8kE
+logo: /static/logo.svg
+
+plugins:
+  - jekyll-seo-tag
