--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,13 @@ collections:
 name: Metric Geometry and Gerrymandering Group
 url: https://www.mggg.org/
 author: Metric Geometry and Gerrymandering Group
-description: A nonpartisan research organization studying applications of geometry
+description:
+  A nonpartisan research organization studying applications of geometry
 logo: "/assets/logo.svg"
 google_site_verification: jaL3ii25-g2LejBrllWbH-DmyT7b-vJw8URj-tvq8kE
 plugins:
-- jekyll-seo-tag
+  - jekyll-seo-tag
 sass:
   sass_dir: _sass
+include:
+  - _redirects
