--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ url: https://www.mggg.org/
 author: Metric Geometry and Gerrymandering Group
 description:
   A nonpartisan research organization studying applications of geometry
+twitter: gerrymandr
 logo: "/assets/logo.svg"
 google_site_verification: jaL3ii25-g2LejBrllWbH-DmyT7b-vJw8URj-tvq8kE
 plugins:
