Update config again

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ collections:
   posts:
     title: Posts
     output: true
-    permalink: /posts/:slug
+    permalink: /posts/:title
   uploads:
     title: Uploads
     output: true
