Update open grpah metadata.

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ collections:
     title: Uploads
     output: true
 name: Metric Geometry and Gerrymandering Group
-url: https://www.mggg.org/
+url: https://www.mggg.org
 author: Metric Geometry and Gerrymandering Group
 description:
   A nonpartisan research organization studying applications of geometry
