--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ collections:
     output: true
     permalink: "/:title"
     layout: category
+  about:
+    title: About Us
+    output: false
+    permalink: "/:title"
+    layout: category
   jobs:
     title: Jobs
     output: false
