--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,12 @@
 - name: Work
   href: /work
 - name: Team
-  href: /who
+  href: /about-us
 - name: Districtr
   href: https://districtr.org
-- name: VRDI
+  external: true
+- name: Events
   href: http://gerrydata.org
+  external: true
 - name: Support
   href: /donate
