add news posts and districtr landing page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,7 @@
 - name: Team
   href: /about-us
 - name: Districtr
-  href: https://districtr.org
-  external: true
+  href: /districtr
 - name: Events
   href: http://gerrydata.org
   external: true
