Update events page link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
 - name: Districtr
   href: /districtr
 - name: Events
-  href: http://gerrydata.org
+  href: https://sites.tufts.edu/vrdi/
   external: true
 - name: Support
   href: /donate
